# bem_automation

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
api/: __init__.py  config.py  main.py
api/database/dtc_descriptions/: connection.py  dtc_descriptions.xlsx  schema.py
api/database/incidents/: connection.py  schema.py
api/database/redis/: main.py
api/models/: IncidentWebhook.py
api/routes/: health.py  webhooks.py
api/services/: dtc_service.py  email_service.py
tests/: conftest.py  test_webhooks.py
